@@ -1,5 +1,7 @@
 === HEAD
 
+* Support :cursor_name option in postgres adapter Dataset#use_cursor (heeringa, jeremyevans) (#696)
+
 * Fix placeholder literal strings when used with an empty placeholder hash (trydionel, jeremyevans) (#695)
 
 === 4.1.1 (2013-08-01)
